tools: Fix property editor rendering input too big
The text input in our properties viewer was too wide and got a few
pixels rendered below the button in the next column of the table.

Fix that.

--- a/tools/slintpad/styles/content.css
+++ b/tools/slintpad/styles/content.css
@@ -99,7 +99,7 @@
 
 .outline .outline-element {
     margin: 0;
-    padding: 0;
+    padding: 2px;
     width: 100%;
     display: block;
 }
@@ -142,6 +142,10 @@
 
 .properties-editor .value-column {
     width: 100%;
+}
+
+.properties-editor .value-column-content {
+    display: flex;
 }
 
 .properties-editor .properties-table {
